shortened messages box to avoid overlap with new message form

--- a/app/assets/stylesheets/components/_message.scss
+++ b/app/assets/stylesheets/components/_message.scss
@@ -7,7 +7,7 @@
     background-color: #f5f5f5;
     padding: 10px;
     // minus navbar / chat header / chat form
-    height: calc(100vh - 250px);
+    height: calc(98vh - 250px);
     overflow-y: scroll;
   }
 
